OBJ Model loader, some example models from TheModelsResource

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body{
-	background:#f0f0f0 url('../img/background.jpg') no-repeat center center;
-	background-size:100%;
+	background:#31b131 url('../img/background.jpg') no-repeat center center;
 	font-family:Helvetica,sans-serif;
 	margin:0;
 	padding:0;
