--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background:#31b131 url('../img/background.jpg') no-repeat center center;
+	background-color:#bababa;
 	font-family:Helvetica,sans-serif;
 	margin:0;
 	padding:0;
@@ -14,6 +14,9 @@ span{
 
 }
 
+a,a:focus,a:visited,a:hover{
+	color:#0EF0B7;
+}
 
 #fadein {
     background-color:#000000;
@@ -28,8 +31,21 @@ span{
 	top:80%;
 	font-size:30px;
 }
+
 #title{
-	font-size:50px;
 	left:17%;
 	top:10%;
+	font-size:50px;
+}
+
+#footer {
+	left:0;	
+	bottom:0;
+	width:100%;
+}
+
+#header {
+	left:0;	
+	top:0;
+	width:100%;
 }
