--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,12 @@ span{
 	font-weight:bold;
 	background-color:#000000;
 	position:absolute;
-	padding: 10px 30px 10px 30px;
 	box-shadow: 2px 2px 6px 0px #000000;
+	padding: 10px 30px 10px 30px;
+       	-moz-box-sizing: border-box;
+    	-webkit-box-sizing: border-box;
+        box-sizing: border-box;
+	font-size:1.5vw;
 
 }
 
@@ -29,13 +33,13 @@ a,a:focus,a:visited,a:hover{
 #option{
 	left:43%;
 	top:80%;
-	font-size:30px;
+	font-size:2vw;
 }
 
 #title{
 	left:17%;
 	top:10%;
-	font-size:50px;
+	font-size:3vw;
 }
 
 #footer {
