--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-color:#bababa;
+	background:#bababa url('../img/background.png') repeat center center;
 	font-family:Helvetica,sans-serif;
 	margin:0;
 	padding:0;
@@ -14,12 +14,12 @@ span{
        	-moz-box-sizing: border-box;
     	-webkit-box-sizing: border-box;
         box-sizing: border-box;
-	font-size:1.5vw;
+	font-size:1.1vw;
 
 }
 
 a,a:focus,a:visited,a:hover{
-	color:#0EF0B7;
+	color:#6CACBA;
 }
 
 #fadein {
